--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "aggregator",
   "version": "1.0.0",
   "dependencies": {
-    "chart.js": "^2.9.3"
+    "chart.js": "^2.9.3",
+    "chartjs-chart-box-and-violin-plot": "^2.3.0"
   }
 }
